[package]
name = "sage"
version = "0.1.1"
authors = ["rvillegasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
dirs = "2.0.2"
indicatif = "0.13.0"
yaml-rust = "0.4.3"
xz2 = "0.1.6"
tar = "0.4.26"
flate2 = "1.0.13"
tempfile = "3.1.0"